# websearch

./: .dockerignore  README.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt  verify_syntax.py
docker/: Dockerfile
src/mcp_web_server/: server.py
src/mcp_web_server/services/: duckduckgo.py  http_client.py
src/mcp_web_server/tools/: scraping.py  search.py
tests/: test_scraping.py  test_search.py
